workflow to generate draft changelog (#390)
Signed-off-by: Luca Stocchi <lstocchi@redhat.com>

--- a/.github/workflows/draftGenerator.yml
+++ b/.github/workflows/draftGenerator.yml
@@ -17,5 +17,5 @@ jobs:
           echo '${{ steps.changelog.outputs.changelog }}' > draft-changelog.md
       - uses: actions/upload-artifact@v2
         with:
-          name: draft-changelog
+          name: drafrt-changelog
           path: draft-changelog.md
